--- a/numberBaseball/build.gradle
+++ b/numberBaseball/build.gradle
@@ -1,13 +1,20 @@
 apply plugin: 'java'
 apply plugin: 'eclipse'
+apply plugin: 'eclipse-wtp'
+apply plugin: 'war'
 
-sourceCompatibility = 1.5
+compileJava.options.encoding = 'UTF-8'
+sourceCompatibility = 1.8
 version = '1.0'
-jar {
-    manifest {
-        attributes 'Implementation-Title': 'Gradle Quickstart',
-                   'Implementation-Version': version
-    }
+
+eclipse{
+	project.natures "org.springsource.ide.eclipse.gradle.core.nature"
+	wtp{
+		facet{
+			facet name: 'jst.web', version : '3.0'
+			facet name: 'jst.java', version : '1.8'
+		}
+	}
 }
 
 repositories {
@@ -15,18 +22,8 @@ repositories {
 }
 
 dependencies {
+	compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
+    compile 'org.springframework:spring-webmvc:4.0.0.RELEASE'
     compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
     testCompile group: 'junit', name: 'junit', version: '4.+'
-}
-
-test {
-    systemProperties 'property': 'value'
-}
-
-uploadArchives {
-    repositories {
-       flatDir {
-           dirs 'repos'
-       }
-    }
 }
