기본적인 틀

--- a/numberBaseball/src/main/webapp/WEB-INF/web.xml
+++ b/numberBaseball/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,7 @@
 	</servlet-mapping>
 	<welcome-file-list>
 		<welcome-file>
-    		index.html
+    		index.jsp
     	</welcome-file>
 	</welcome-file-list>
 	<filter>
