--- a/numberBaseball/build.gradle
+++ b/numberBaseball/build.gradle
@@ -22,6 +22,8 @@ repositories {
 }
 
 dependencies {
+	compile 'org.slf4j:slf4j-api:1.7.7'
+	compile 'ch.qos.logback:logback-classic:1.1.2'
 	compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
     compile 'org.springframework:spring-webmvc:4.0.0.RELEASE'
     compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
