--- a/numberBaseball/build.gradle
+++ b/numberBaseball/build.gradle
@@ -22,6 +22,7 @@ repositories {
 }
 
 dependencies {
+	compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
 	compile 'javax.servlet:jstl:1.2'
 	compile 'org.slf4j:slf4j-api:1.7.7'
 	compile 'ch.qos.logback:logback-classic:1.1.2'
