--- a/numberBaseball/build.gradle
+++ b/numberBaseball/build.gradle
@@ -22,6 +22,8 @@ repositories {
 }
 
 dependencies {
+    compile group: 'javax.validation', name: 'validation-api', version: '1.1.0.Final'
+    compile group: 'org.hibernate', name: 'hibernate-validator', version: '5.1.3.Final'
 	compile group: 'org.springframework', name: 'spring-jdbc', version: '3.2.5.RELEASE'
 	compile group: 'org.mybatis', name: 'mybatis-spring', version: '1.2.0'
 	compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.27'
