--- a/numberBaseball/build.gradle
+++ b/numberBaseball/build.gradle
@@ -17,13 +17,20 @@ eclipse{
 	}
 }
 
+ext {
+	springVersion = '4.3.7.RELEASE'
+}
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
+	compile group: 'com.h2database', name: 'h2', version: '1.4.192'
+	compile group: 'org.springframework', name: 'spring-context', version: springVersion
+	compile group: 'commons-dbcp', name: 'commons-dbcp', version: '1.2.2'
     compile group: 'org.hibernate', name: 'hibernate-validator', version: '5.1.3.Final'
-	compile group: 'org.springframework', name: 'spring-jdbc', version: '3.2.5.RELEASE'
+	compile group: 'org.springframework', name: 'spring-jdbc', version: springVersion
 	compile group: 'org.mybatis', name: 'mybatis-spring', version: '1.2.0'
 	compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.27'
 	compile group: 'org.mybatis', name: 'mybatis', version: '3.2.2'
@@ -32,8 +39,8 @@ dependencies {
 	compile 'org.slf4j:slf4j-api:1.7.7'
 	compile 'ch.qos.logback:logback-classic:1.1.2'
 	compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
-    compile 'org.springframework:spring-webmvc:4.0.0.RELEASE'
+    compile 'org.springframework:spring-webmvc:' + springVersion
     compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
-    testCompile group: 'org.springframework', name: 'spring-test', version: '4.0.0.RELEASE'
+    testCompile group: 'org.springframework', name: 'spring-test', version: springVersion
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
