--- a/numberBaseball/src/main/resources/jdbc.properties
+++ b/numberBaseball/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
-jdbc.driverClass=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/numberBaseball
-jdbc.username=numberBaseball
-jdbc.password=numberBaseball
+jdbc.driverClass=org.h2.Driver
+jdbc.url=jdbc:h2:mem:testdb;INIT=RUNSCRIPT FROM 'classpath:init.sql'
+jdbc.username=sa
+jdbc.password=
