--- a/PhoneBook/build.gradle
+++ b/PhoneBook/build.gradle
@@ -14,4 +14,5 @@ dependencies {
 	compile 'ch.qos.logback:logback-classic:1.1.2'
     compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
     testCompile group: 'junit', name: 'junit', version: '4.+'
+    testCompile 'org.assertj:assertj-core:3.6.2'
 }
